src/objects/Deployment_Detail__c.object
<CustomObject>
    <description>This object will enforce users to capture the deployment details at Stage = W10.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Detail__c</fullName>
        <inlineHelpText>Please enter a detailed description of the license configuration of the customer (controllers, etc.)</inlineHelpText>
        <label>Deployment Detail</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Deployment_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Notes to Orderops</label>
    <nameField>
        <displayFormat>Detail-{000000}</displayFormat>
        <label>Deployment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes to Orderops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>